[package]
name = "img2nutexb"
version = "0.3.0"
authors = ["jam1garner <8260240+jam1garner@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.10"
#nutexb = { git = "https://github.com/jam1garner/nutexb" }
nutexb = { path = "../nutexb" }
structopt = "0.3.19"
ddsfile = "0.4"
owo-colors = "2.0.0"
